@@ -194,6 +194,11 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+assert|assert
+name|doc
+operator|!=
+name|NO_MORE_DOCS
+assert|;
 while|while
 condition|(
 literal|true
@@ -292,6 +297,23 @@ operator|.
 name|docID
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|doc
+operator|==
+name|NO_MORE_DOCS
+condition|)
+block|{
+name|nrMatchers
+operator|=
+name|Integer
+operator|.
+name|MAX_VALUE
+expr_stmt|;
+comment|// stop looping
+block|}
+else|else
+block|{
 name|score
 operator|=
 name|sub
@@ -313,6 +335,7 @@ argument_list|(
 literal|2
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 comment|// TODO: this currently scores, but so did the previous impl
 comment|// TODO: remove recursion.
